--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
    				 <groupId>org.springframework.boot</groupId>
    	 		<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 			</dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.25</version>
+</dependency>
 
         
     </dependencies>
